--- a/.github/workflows/snake.yaml
+++ b/.github/workflows/snake.yaml
@@ -1,4 +1,4 @@
-name: Generate Snake Contribution Graph
+name: Generate Snake Animation
 
 on:
   schedule:
@@ -6,17 +6,16 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  generate:
     runs-on: ubuntu-latest
     steps:
       - uses: Platane/snk@v3
         with:
           github_user_name: prc1196
-          outputs: |
-            dist/github-contribution-grid-snake.svg
+          outputs: dist/github-contribution-grid-snake.svg
 
-      - name: Push to GitHub
-        uses: crazy-max/ghaction-github-pages@v4
+      - name: Push to the output branch
+        uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
           build_dir: dist
